# docs/swagger.json
@@ -18,7 +18,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Apps"
+                    "App"
                 ],
                 "summary": "Creates a new app",
                 "operationId": "app-create",
@@ -36,6 +36,51 @@
                 "responses": {
                     "201": {
                         "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/serializers.AppSerializer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.HTTPError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/apps/{uuid}": {
+            "get": {
+                "description": "get an app by his uuid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "App"
+                ],
+                "summary": "Get an app",
+                "operationId": "app-read",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "App uuid",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/serializers.AppSerializer"
                         }
@@ -119,7 +164,7 @@
                 "parameters": [
                     {
                         "description": "Refresh the given access token with the refresh one",
-                        "name": "user",
+                        "name": "tokens",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -156,7 +201,7 @@
                     "Me"
                 ],
                 "summary": "Get me",
-                "operationId": "user-read-me",
+                "operationId": "me-read",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -190,7 +235,7 @@
                     "Me"
                 ],
                 "summary": "Delete me",
-                "operationId": "user-delete-me",
+                "operationId": "me-delete",
                 "responses": {
                     "204": {
                         "description": ""
@@ -210,7 +255,7 @@
                 }
             },
             "patch": {
-                "description": "updates an user",
+                "description": "update me",
                 "consumes": [
                     "application/json"
                 ],
@@ -220,8 +265,8 @@
                 "tags": [
                     "Me"
                 ],
-                "summary": "Update user",
-                "operationId": "user-update",
+                "summary": "Update me",
+                "operationId": "me-update",
                 "parameters": [
                     {
                         "description": "Updates the user with the given data",
@@ -257,7 +302,7 @@
         },
         "/me/reset-password": {
             "post": {
-                "description": "Reset user password",
+                "description": "Reset my password",
                 "consumes": [
                     "application/json"
                 ],
@@ -267,8 +312,8 @@
                 "tags": [
                     "Me"
                 ],
-                "summary": "Reset user password",
-                "operationId": "user-reset-password",
+                "summary": "Reset my password",
+                "operationId": "me-reset-password",
                 "responses": {
                     "204": {
                         "description": ""
@@ -290,7 +335,7 @@
         },
         "/me/verify": {
             "post": {
-                "description": "Verify an user",
+                "description": "Verify me",
                 "consumes": [
                     "application/json"
                 ],
@@ -300,8 +345,8 @@
                 "tags": [
                     "Me"
                 ],
-                "summary": "Verify user",
-                "operationId": "user-verify",
+                "summary": "Verify me",
+                "operationId": "me-verify",
                 "responses": {
                     "204": {
                         "description": ""
@@ -619,8 +664,8 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Get user",
-                "operationId": "user-read-uuid",
+                "summary": "Get an user",
+                "operationId": "user-read",
                 "parameters": [
                     {
                         "type": "string",
